found errors in CSS

--- a/style.css
+++ b/style.css
@@ -10,13 +10,13 @@
 
 }
 #main{
-	width: 970px
+	width: 970px;
 	height: 600px;
 	background-color: #225077;
 
 }
 .header{
- height: 100x;
+ height: 100px;
  /*background-color: green;*/
  
 }
